// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MilestonesSidePanel Congratulated renders with text message preview 1`] = `
.c4 {
  font: 500 0.875rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  background: transparent;
  border: none;
  color: #006c67;
  cursor: pointer;
  padding: 0;
}

.c4:active,
.c4:hover,
.c4:focus,
.c4[aria-expanded="true"] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4:active,
.c4[aria-expanded="true"] {
  color: #014c48;
}

.c4:disabled {
  cursor: not-allowed;
  color: rgba(53,83,98,0.7);
}

.c16 {
  pointer-events: none;
}

.c16 > * {
  pointer-events: auto;
}

.c0 .ReactModal__Overlay {
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
  background-color: rgba(233,237,237,0.7);
  height: 100%;
  left: 0;
  opacity: 0;
  position: fixed;
  top: 0;
  -webkit-transition: opacity 500ms;
  transition: opacity 500ms;
  width: 100%;
  z-index: 1000;
}

.c0 .ReactModal__Overlay.ReactModal__Overlay--after-open {
  opacity: 1;
}

.c0 .ReactModal__Overlay.ReactModal__Overlay--before-close {
  opacity: 0;
}

.c0 .ReactModal__Content {
  background: #fff;
  border-radius: 8px;
  box-shadow: 0px 15px 40px rgba(22,26,33,0.3), inset 0px -1px 1px rgba(19,44,82,0.2);
  left: 50%;
  max-height: 90vh;
  max-width: 90vw;
  outline: none;
  overflow: auto;
  padding: 40px;
  position: fixed;
  top: 50%;
  -webkit-transform: translate(-50%,-50%) scale(0.75);
  -ms-transform: translate(-50%,-50%) scale(0.75);
  transform: translate(-50%,-50%) scale(0.75);
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  -webkit-transition: transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
  width: 462px;
  z-index: 1001;
}

.c0 .ReactModal__Overlay[class*="--after-open"] .ReactModal__Content {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c0 .ReactModal__Overlay[class*="--before-close"] .ReactModal__Content {
  -webkit-transform: translate(-50%,-50%) scale(0.75);
  -ms-transform: translate(-50%,-50%) scale(0.75);
  transform: translate(-50%,-50%) scale(0.75);
}

.c1.c1 .ReactModal__Content {
  padding: 0;
}

.c2.c2 .ReactModal__Content {
  height: calc(100vh - 3rem);
  max-height: unset;
  max-width: calc(100vw - 3rem);
  width: 30rem;
  left: unset;
  right: 1.5rem;
  -webkit-transform: translate( 30rem, -50% ) !important;
  -ms-transform: translate( 30rem, -50% ) !important;
  transform: translate( 30rem, -50% ) !important;
}

.c2.c2 .ReactModal__Content.ReactModal__Content--after-open {
  -webkit-transform: translate(0,-50%) !important;
  -ms-transform: translate(0,-50%) !important;
  transform: translate(0,-50%) !important;
}

.c2.c2 .ReactModal__Content.ReactModal__Content--before-close {
  -webkit-transform: translate( 30rem, -50% ) !important;
  -ms-transform: translate( 30rem, -50% ) !important;
  transform: translate( 30rem, -50% ) !important;
}

.c13 {
  font: 500 0.875rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c22 {
  font: 500 1rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c15 {
  font: 500 1.125rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.02em;
  -moz-letter-spacing: -0.02em;
  -ms-letter-spacing: -0.02em;
  letter-spacing: -0.02em;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5rem;
  line-height: 2.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  position: relative;
  width: 2.5rem;
}

.c12 svg {
  left: 0;
  position: absolute;
}

.c14 {
  color: white;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 0.625rem;
  font-weight: 700;
  line-height: 1;
  position: relative;
  text-align: center;
}

.c19 {
  color: rgba(53,83,98,0.3);
}

.c18 {
  color: #003331;
}

.c20 {
  color: #90aeb5;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-column-gap: 0.5rem;
  column-gap: 0.5rem;
  display: grid;
  grid-template-columns: auto 1fr;
}

.c11:hover .c17 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #006c67;
}

.c21 {
  color: rgba(53,83,98,0.7);
  text-wrap: balance;
  width: 18rem;
}

.c10 {
  margin-bottom: 1rem;
}

.c3 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(53,83,98,0.1);
  padding: 1rem;
}

.c3 .WorkflowsPreviewModal__close {
  grid-column: 2;
  justify-self: flex-end;
}

.c3 .WorkflowsPreviewModal__back {
  grid-column: 1;
  justify-self: flex-start;
}

.c5 {
  padding: 1.5rem 1rem;
}

.c5 hr + hr {
  display: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  margin-left: 0.5rem;
}

.c7 {
  font: 500 1rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: rgba(53,83,98,0.85);
  background-color: #eff1f1;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  height: 4rem;
  margin: 1rem 0 2rem 0;
  padding: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c23 {
  color: rgba(53,83,98,0.85);
  margin: 1rem 0;
}

.c25 {
  color: rgba(53,83,98,0.85);
  border: 1px solid rgba(53,83,98,0.2);
  margin: 1rem 0 0;
  padding: 1rem;
  border-radius: 8px;
  white-space: pre-line;
}

.c24 {
  color: #012322;
}

.c26 {
  font: 500 0.875rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

@media (max-width:1372px) {
  .c21 {
    width: 15rem;
  }
}

<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="c0 c1 c2 "
  />
  <div
    class="c0 c1 c2 "
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="c0 c1 c2 "
  >
    <div
      class="ReactModal__Overlay"
    >
      <div
        aria-modal="true"
        class="ReactModal__Content"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="c3"
        >
          <button
            class="c4 WorkflowsPreviewModal__close"
            kind="link"
            shape="pill"
            type="button"
          >
            <svg
              fill="#003331"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.7 0.3C13.3 -0.1 12.7 -0.1 12.3 0.3L7 5.6L1.7 0.3C1.3 -0.1 0.7 -0.1 0.3 0.3C-0.1 0.7 -0.1 1.3 0.3 1.7L5.6 7L0.3 12.3C-0.1 12.7 -0.1 13.3 0.3 13.7C0.5 13.9 0.7 14 1 14C1.3 14 1.5 13.9 1.7 13.7L7 8.4L12.3 13.7C12.5 13.9 12.8 14 13 14C13.2 14 13.5 13.9 13.7 13.7C14.1 13.3 14.1 12.7 13.7 12.3L8.4 7L13.7 1.7C14.1 1.3 14.1 0.7 13.7 0.3Z"
              />
            </svg>
          </button>
        </div>
        <div
          class="c5 WorkflowsPreviewModal"
        >
          <div
            class="c6"
            data-testid="CongratulatedSidePanel"
          >
            <div
              class="c7"
            >
              <div
                class="c8"
              >
                <div />
                <span
                  class="c9"
                >
                  Message Sent
                </span>
              </div>
            </div>
            <div
              class="c10"
            >
              <a
                class="PersonProfileLink"
                href="/workflows/clients/p101"
              >
                <div
                  class="c11"
                >
                  <div
                    class="c12 UserAvatar"
                    size="40"
                  >
                    <svg
                      fill="none"
                      height="40"
                      role="img"
                      viewBox="0 0 80 80"
                      width="40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        LH
                      </title>
                      <mask
                        height="80"
                        id=":r2:"
                        maskUnits="userSpaceOnUse"
                        width="80"
                        x="0"
                        y="0"
                      >
                        <rect
                          fill="#FFFFFF"
                          height="80"
                          rx="160"
                          width="80"
                        />
                      </mask>
                      <g
                        mask="url(#:r2:)"
                      >
                        <rect
                          fill="#90aeb5"
                          height="80"
                          width="80"
                        />
                        <path
                          d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
                          fill="#cc989c"
                          filter="url(#prefix__filter0_f)"
                          transform="translate(0 0) rotate(176 40 40) scale(1.2)"
                        />
                        <path
                          d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
                          fill="#25636f"
                          filter="url(#prefix__filter0_f)"
                          style="mix-blend-mode: overlay;"
                          transform="translate(-4 -4) rotate(-84 40 40) scale(1.2)"
                        />
                      </g>
                      <defs>
                        <filter
                          color-interpolation-filters="sRGB"
                          filterUnits="userSpaceOnUse"
                          id="prefix__filter0_f"
                        >
                          <feflood
                            flood-opacity="0"
                            result="BackgroundImageFix"
                          />
                          <feblend
                            in="SourceGraphic"
                            in2="BackgroundImageFix"
                            result="shape"
                          />
                          <fegaussianblur
                            result="effect1_foregroundBlur"
                            stdDeviation="7"
                          />
                        </filter>
                      </defs>
                    </svg>
                    <div
                      class="c13 c14 fs-exclude"
                      size="40"
                    >
                      LH
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <div
                      class="c15"
                    >
                      <span
                        class="c16"
                      >
                        <span
                          class="c17 c18 PersonName fs-exclude"
                        >
                          Linet Hansen
                        </span>
                      </span>
                      <span
                        class="c19"
                      >
                         
                      </span>
                      <span
                        class="c20 fs-exclude"
                      >
                        d101
                      </span>
                    </div>
                    <div
                      class="c13 c21 WorkflowsStatus__101 fs-exclude"
                    >
                      TN PROBATIONER
                    </div>
                  </div>
                </div>
              </a>
            </div>
            <div
              class="c22 c23"
            >
              Firstname Smith
               sent the following text messages to
               
              Linet Hansen
               at
               
              <span
                class="c24"
              >
                (555) 555-5678
              </span>
               
              on Unknown
              .
            </div>
            <div
              class="c22 c25"
            >
              This is the full text message
            </div>
            <div
              class="c22 c25"
            >
              To stop receiving these texts, reply: STOP
            </div>
            <div
              class="c26"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MilestonesSidePanel Declined to Send 1`] = `
.c4 {
  font: 500 0.875rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  background: transparent;
  border: none;
  color: #006c67;
  cursor: pointer;
  padding: 0;
}

.c4:active,
.c4:hover,
.c4:focus,
.c4[aria-expanded="true"] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4:active,
.c4[aria-expanded="true"] {
  color: #014c48;
}

.c4:disabled {
  cursor: not-allowed;
  color: rgba(53,83,98,0.7);
}

.c13 {
  pointer-events: none;
}

.c13 > * {
  pointer-events: auto;
}

.c0 .ReactModal__Overlay {
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
  background-color: rgba(233,237,237,0.7);
  height: 100%;
  left: 0;
  opacity: 0;
  position: fixed;
  top: 0;
  -webkit-transition: opacity 500ms;
  transition: opacity 500ms;
  width: 100%;
  z-index: 1000;
}

.c0 .ReactModal__Overlay.ReactModal__Overlay--after-open {
  opacity: 1;
}

.c0 .ReactModal__Overlay.ReactModal__Overlay--before-close {
  opacity: 0;
}

.c0 .ReactModal__Content {
  background: #fff;
  border-radius: 8px;
  box-shadow: 0px 15px 40px rgba(22,26,33,0.3), inset 0px -1px 1px rgba(19,44,82,0.2);
  left: 50%;
  max-height: 90vh;
  max-width: 90vw;
  outline: none;
  overflow: auto;
  padding: 40px;
  position: fixed;
  top: 50%;
  -webkit-transform: translate(-50%,-50%) scale(0.75);
  -ms-transform: translate(-50%,-50%) scale(0.75);
  transform: translate(-50%,-50%) scale(0.75);
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  -webkit-transition: transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
  width: 462px;
  z-index: 1001;
}

.c0 .ReactModal__Overlay[class*="--after-open"] .ReactModal__Content {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c0 .ReactModal__Overlay[class*="--before-close"] .ReactModal__Content {
  -webkit-transform: translate(-50%,-50%) scale(0.75);
  -ms-transform: translate(-50%,-50%) scale(0.75);
  transform: translate(-50%,-50%) scale(0.75);
}

.c1.c1 .ReactModal__Content {
  padding: 0;
}

.c2.c2 .ReactModal__Content {
  height: calc(100vh - 3rem);
  max-height: unset;
  max-width: calc(100vw - 3rem);
  width: 30rem;
  left: unset;
  right: 1.5rem;
  -webkit-transform: translate( 30rem, -50% ) !important;
  -ms-transform: translate( 30rem, -50% ) !important;
  transform: translate( 30rem, -50% ) !important;
}

.c2.c2 .ReactModal__Content.ReactModal__Content--after-open {
  -webkit-transform: translate(0,-50%) !important;
  -ms-transform: translate(0,-50%) !important;
  transform: translate(0,-50%) !important;
}

.c2.c2 .ReactModal__Content.ReactModal__Content--before-close {
  -webkit-transform: translate( 30rem, -50% ) !important;
  -ms-transform: translate( 30rem, -50% ) !important;
  transform: translate( 30rem, -50% ) !important;
}

.c10 {
  font: 500 0.875rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c23 {
  font: 500 1rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c12 {
  font: 500 1.125rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.02em;
  -moz-letter-spacing: -0.02em;
  -ms-letter-spacing: -0.02em;
  letter-spacing: -0.02em;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5rem;
  line-height: 2.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  position: relative;
  width: 2.5rem;
}

.c9 svg {
  left: 0;
  position: absolute;
}

.c11 {
  color: white;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 0.625rem;
  font-weight: 700;
  line-height: 1;
  position: relative;
  text-align: center;
}

.c16 {
  color: rgba(53,83,98,0.3);
}

.c15 {
  color: #003331;
}

.c17 {
  color: #90aeb5;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-column-gap: 0.5rem;
  column-gap: 0.5rem;
  display: grid;
  grid-template-columns: auto 1fr;
}

.c8:hover .c14 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #006c67;
}

.c18 {
  color: rgba(53,83,98,0.7);
  text-wrap: balance;
  width: 18rem;
}

.c7 {
  margin-bottom: 1rem;
}

.c3 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(53,83,98,0.1);
  padding: 1rem;
}

.c3 .WorkflowsPreviewModal__close {
  grid-column: 2;
  justify-self: flex-end;
}

.c3 .WorkflowsPreviewModal__back {
  grid-column: 1;
  justify-self: flex-start;
}

.c5 {
  padding: 1.5rem 1rem;
}

.c5 hr + hr {
  display: none;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 {
  margin-left: 0.5rem;
}

.c19 {
  font: 500 1rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: rgba(53,83,98,0.85);
  background-color: #eff1f1;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  height: 4rem;
  margin: 1rem 0 2rem 0;
  padding: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c24 {
  color: #012322;
  padding: 1rem 0;
}

.c22 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

.c27 {
  font: 500 0.875rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: #014c48;
  margin-left: 6px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  padding: 4px 0;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

@media (max-width:1372px) {
  .c18 {
    width: 15rem;
  }
}

<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="c0 c1 c2 "
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="c0 c1 c2 "
  >
    <div
      class="ReactModal__Overlay"
    >
      <div
        aria-modal="true"
        class="ReactModal__Content"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="c3"
        >
          <button
            class="c4 WorkflowsPreviewModal__close"
            kind="link"
            shape="pill"
            type="button"
          >
            <svg
              fill="#003331"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.7 0.3C13.3 -0.1 12.7 -0.1 12.3 0.3L7 5.6L1.7 0.3C1.3 -0.1 0.7 -0.1 0.3 0.3C-0.1 0.7 -0.1 1.3 0.3 1.7L5.6 7L0.3 12.3C-0.1 12.7 -0.1 13.3 0.3 13.7C0.5 13.9 0.7 14 1 14C1.3 14 1.5 13.9 1.7 13.7L7 8.4L12.3 13.7C12.5 13.9 12.8 14 13 14C13.2 14 13.5 13.9 13.7 13.7C14.1 13.3 14.1 12.7 13.7 12.3L8.4 7L13.7 1.7C14.1 1.3 14.1 0.7 13.7 0.3Z"
              />
            </svg>
          </button>
        </div>
        <div
          class="c5 WorkflowsPreviewModal"
        >
          <div
            class="c6"
            data-testid="DeclinedSidePanel"
          >
            <div
              class="c7"
            >
              <a
                class="PersonProfileLink"
                href="/workflows/clients/p101"
              >
                <div
                  class="c8"
                >
                  <div
                    class="c9 UserAvatar"
                    size="40"
                  >
                    <svg
                      fill="none"
                      height="40"
                      role="img"
                      viewBox="0 0 80 80"
                      width="40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        LH
                      </title>
                      <mask
                        height="80"
                        id=":r1:"
                        maskUnits="userSpaceOnUse"
                        width="80"
                        x="0"
                        y="0"
                      >
                        <rect
                          fill="#FFFFFF"
                          height="80"
                          rx="160"
                          width="80"
                        />
                      </mask>
                      <g
                        mask="url(#:r1:)"
                      >
                        <rect
                          fill="#90aeb5"
                          height="80"
                          width="80"
                        />
                        <path
                          d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
                          fill="#cc989c"
                          filter="url(#prefix__filter0_f)"
                          transform="translate(0 0) rotate(176 40 40) scale(1.2)"
                        />
                        <path
                          d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
                          fill="#25636f"
                          filter="url(#prefix__filter0_f)"
                          style="mix-blend-mode: overlay;"
                          transform="translate(-4 -4) rotate(-84 40 40) scale(1.2)"
                        />
                      </g>
                      <defs>
                        <filter
                          color-interpolation-filters="sRGB"
                          filterUnits="userSpaceOnUse"
                          id="prefix__filter0_f"
                        >
                          <feflood
                            flood-opacity="0"
                            result="BackgroundImageFix"
                          />
                          <feblend
                            in="SourceGraphic"
                            in2="BackgroundImageFix"
                            result="shape"
                          />
                          <fegaussianblur
                            result="effect1_foregroundBlur"
                            stdDeviation="7"
                          />
                        </filter>
                      </defs>
                    </svg>
                    <div
                      class="c10 c11 fs-exclude"
                      size="40"
                    >
                      LH
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <div
                      class="c12"
                    >
                      <span
                        class="c13"
                      >
                        <span
                          class="c14 c15 PersonName fs-exclude"
                        >
                          Linet Hansen
                        </span>
                      </span>
                      <span
                        class="c16"
                      >
                         
                      </span>
                      <span
                        class="c17 fs-exclude"
                      >
                        d101
                      </span>
                    </div>
                    <div
                      class="c10 c18 WorkflowsStatus__101 fs-exclude"
                    >
                      TN PROBATIONER
                    </div>
                  </div>
                </div>
              </a>
            </div>
            <div
              class="c19"
            >
              <div
                class="c20"
              >
                <div />
                <span
                  class="c21"
                >
                  Declined
                </span>
              </div>
              <span
                class="c22"
              >
                Undo
              </span>
            </div>
            <div
              class="c23 c24"
            >
              Reasons
            </div>
            <div
              class="c25"
            />
            <div
              class="c23 c24"
            >
              Milestones
            </div>
            <div
              class="c25"
            >
              <div
                class="c26"
              >
                <div />
                <span
                  class="c27"
                >
                  6 months violation-free
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MilestonesSidePanel New Milestones renders with ComposeMessageView 1`] = `
.c35 {
  font: 500 0.875rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-property: color,background-color,border-color;
  transition-property: color,background-color,border-color;
  min-width: 8.0625rem;
  min-height: 2.5rem;
  padding: 0.75rem 1rem;
  border-radius: 62.4375rem;
  border: none;
  background-color: #006c67;
  color: #fff;
}

.c35:disabled {
  cursor: not-allowed;
}

.c35:hover,
.c35:focus {
  background-color: #014c48;
}

.c35:active,
.c35[aria-expanded="true"] {
  background-color: #00413e;
}

.c35:disabled {
  background-color: rgba(53,83,98,0.1);
  color: rgba(53,83,98,0.8);
}

.c4 {
  font: 500 0.875rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  background: transparent;
  border: none;
  color: #006c67;
  cursor: pointer;
  padding: 0;
}

.c4:active,
.c4:hover,
.c4:focus,
.c4[aria-expanded="true"] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4:active,
.c4[aria-expanded="true"] {
  color: #014c48;
}

.c4:disabled {
  cursor: not-allowed;
  color: rgba(53,83,98,0.7);
}

.c13 {
  pointer-events: none;
}

.c13 > * {
  pointer-events: auto;
}

.c0 .ReactModal__Overlay {
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
  background-color: rgba(233,237,237,0.7);
  height: 100%;
  left: 0;
  opacity: 0;
  position: fixed;
  top: 0;
  -webkit-transition: opacity 500ms;
  transition: opacity 500ms;
  width: 100%;
  z-index: 1000;
}

.c0 .ReactModal__Overlay.ReactModal__Overlay--after-open {
  opacity: 1;
}

.c0 .ReactModal__Overlay.ReactModal__Overlay--before-close {
  opacity: 0;
}

.c0 .ReactModal__Content {
  background: #fff;
  border-radius: 8px;
  box-shadow: 0px 15px 40px rgba(22,26,33,0.3), inset 0px -1px 1px rgba(19,44,82,0.2);
  left: 50%;
  max-height: 90vh;
  max-width: 90vw;
  outline: none;
  overflow: auto;
  padding: 40px;
  position: fixed;
  top: 50%;
  -webkit-transform: translate(-50%,-50%) scale(0.75);
  -ms-transform: translate(-50%,-50%) scale(0.75);
  transform: translate(-50%,-50%) scale(0.75);
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  -webkit-transition: transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
  width: 462px;
  z-index: 1001;
}

.c0 .ReactModal__Overlay[class*="--after-open"] .ReactModal__Content {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c0 .ReactModal__Overlay[class*="--before-close"] .ReactModal__Content {
  -webkit-transform: translate(-50%,-50%) scale(0.75);
  -ms-transform: translate(-50%,-50%) scale(0.75);
  transform: translate(-50%,-50%) scale(0.75);
}

.c1.c1 .ReactModal__Content {
  padding: 0;
}

.c2.c2 .ReactModal__Content {
  height: calc(100vh - 3rem);
  max-height: unset;
  max-width: calc(100vw - 3rem);
  width: 30rem;
  left: unset;
  right: 1.5rem;
  -webkit-transform: translate( 30rem, -50% ) !important;
  -ms-transform: translate( 30rem, -50% ) !important;
  transform: translate( 30rem, -50% ) !important;
}

.c2.c2 .ReactModal__Content.ReactModal__Content--after-open {
  -webkit-transform: translate(0,-50%) !important;
  -ms-transform: translate(0,-50%) !important;
  transform: translate(0,-50%) !important;
}

.c2.c2 .ReactModal__Content.ReactModal__Content--before-close {
  -webkit-transform: translate( 30rem, -50% ) !important;
  -ms-transform: translate( 30rem, -50% ) !important;
  transform: translate( 30rem, -50% ) !important;
}

.c31 {
  font: 500 0.75rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c10 {
  font: 500 0.875rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c19 {
  font: 500 1rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c12 {
  font: 500 1.125rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.02em;
  -moz-letter-spacing: -0.02em;
  -ms-letter-spacing: -0.02em;
  letter-spacing: -0.02em;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5rem;
  line-height: 2.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  position: relative;
  width: 2.5rem;
}

.c9 svg {
  left: 0;
  position: absolute;
}

.c11 {
  color: white;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 0.625rem;
  font-weight: 700;
  line-height: 1;
  position: relative;
  text-align: center;
}

.c16 {
  color: rgba(53,83,98,0.3);
}

.c15 {
  color: #003331;
}

.c17 {
  color: #90aeb5;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-column-gap: 0.5rem;
  column-gap: 0.5rem;
  display: grid;
  grid-template-columns: auto 1fr;
}

.c8:hover .c14 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #006c67;
}

.c18 {
  color: rgba(53,83,98,0.7);
  text-wrap: balance;
  width: 18rem;
}

.c7 {
  margin-bottom: 1rem;
}

.c3 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(53,83,98,0.1);
  padding: 1rem;
}

.c3 .WorkflowsPreviewModal__close {
  grid-column: 2;
  justify-self: flex-end;
}

.c3 .WorkflowsPreviewModal__back {
  grid-column: 1;
  justify-self: flex-start;
}

.c5 {
  padding: 1.5rem 1rem;
}

.c5 hr + hr {
  display: none;
}

.c20 {
  color: #012322;
  padding: 1rem 0;
}

.c32 {
  color: rgba(53,83,98,0.85);
  margin: 0.75rem 0;
}

.c33 {
  font: 500 0.875rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c36 {
  border-radius: 4px;
  color: #fff;
  width: 100%;
  margin-bottom: 0.75rem;
}

.c37 {
  border-radius: 4px;
  background-color: #fff;
  border: 1px solid rgba(53,83,98,0.3);
  color: rgba(53,83,98,0.85);
  width: 100%;
  margin-bottom: 0.75rem;
}

.c37:hover,
.c37:focus {
  color: #fff;
}

.c38 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

.c23 {
  font: 500 0.875rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: #014c48;
  margin-left: 6px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  padding: 4px 0;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

.c34 {
  width: 100%;
}

.c24 {
  font: 500 0.75rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  background-color: rgba(53,83,98,0.1);
  color: rgba(53,83,98,0.85);
  margin-top: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  padding: 1rem;
  border-radius: 8px;
}

.c26 {
  font: 500 1rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  border-width: 0;
  background-color: transparent;
  color: rgba(53,83,98,0.85);
  padding: 0;
}

.c26::-webkit-input-placeholder {
  color: rgba(53,83,98,0.6);
}

.c26::-moz-placeholder {
  color: rgba(53,83,98,0.6);
}

.c26:-ms-input-placeholder {
  color: rgba(53,83,98,0.6);
}

.c26::placeholder {
  color: rgba(53,83,98,0.6);
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c27 {
  font: 500 1rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  background-color: rgba(53,83,98,0.1);
  color: rgba(53,83,98,0.85);
  margin-top: 2rem;
  border-radius: 8px;
  padding: 1rem;
}

.c29 {
  white-space: pre-line;
  padding-bottom: 1rem;
}

.c28 {
  font: 500 0.75rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c30 {
  width: 100%;
  background-color: transparent;
  border: 0;
  max-height: 100px;
  color: rgba(53,83,98,0.85);
}

.c30::-webkit-input-placeholder {
  color: rgba(53,83,98,0.6);
}

.c30::-moz-placeholder {
  color: rgba(53,83,98,0.6);
}

.c30:-ms-input-placeholder {
  color: rgba(53,83,98,0.6);
}

.c30::placeholder {
  color: rgba(53,83,98,0.6);
}

@media (max-width:1372px) {
  .c18 {
    width: 15rem;
  }
}

<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="c0 c1 c2 "
  >
    <div
      class="ReactModal__Overlay"
    >
      <div
        aria-modal="true"
        class="ReactModal__Content"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="c3"
        >
          <button
            class="c4 WorkflowsPreviewModal__close"
            kind="link"
            shape="pill"
            type="button"
          >
            <svg
              fill="#003331"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.7 0.3C13.3 -0.1 12.7 -0.1 12.3 0.3L7 5.6L1.7 0.3C1.3 -0.1 0.7 -0.1 0.3 0.3C-0.1 0.7 -0.1 1.3 0.3 1.7L5.6 7L0.3 12.3C-0.1 12.7 -0.1 13.3 0.3 13.7C0.5 13.9 0.7 14 1 14C1.3 14 1.5 13.9 1.7 13.7L7 8.4L12.3 13.7C12.5 13.9 12.8 14 13 14C13.2 14 13.5 13.9 13.7 13.7C14.1 13.3 14.1 12.7 13.7 12.3L8.4 7L13.7 1.7C14.1 1.3 14.1 0.7 13.7 0.3Z"
              />
            </svg>
          </button>
        </div>
        <div
          class="c5 WorkflowsPreviewModal"
        >
          <div
            class="c6"
            data-testid="ComposeMessageView"
          >
            <div
              class="c7"
            >
              <a
                class="PersonProfileLink"
                href="/workflows/clients/p101"
              >
                <div
                  class="c8"
                >
                  <div
                    class="c9 UserAvatar"
                    size="40"
                  >
                    <svg
                      fill="none"
                      height="40"
                      role="img"
                      viewBox="0 0 80 80"
                      width="40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        LH
                      </title>
                      <mask
                        height="80"
                        id=":r0:"
                        maskUnits="userSpaceOnUse"
                        width="80"
                        x="0"
                        y="0"
                      >
                        <rect
                          fill="#FFFFFF"
                          height="80"
                          rx="160"
                          width="80"
                        />
                      </mask>
                      <g
                        mask="url(#:r0:)"
                      >
                        <rect
                          fill="#90aeb5"
                          height="80"
                          width="80"
                        />
                        <path
                          d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
                          fill="#cc989c"
                          filter="url(#prefix__filter0_f)"
                          transform="translate(0 0) rotate(176 40 40) scale(1.2)"
                        />
                        <path
                          d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
                          fill="#25636f"
                          filter="url(#prefix__filter0_f)"
                          style="mix-blend-mode: overlay;"
                          transform="translate(-4 -4) rotate(-84 40 40) scale(1.2)"
                        />
                      </g>
                      <defs>
                        <filter
                          color-interpolation-filters="sRGB"
                          filterUnits="userSpaceOnUse"
                          id="prefix__filter0_f"
                        >
                          <feflood
                            flood-opacity="0"
                            result="BackgroundImageFix"
                          />
                          <feblend
                            in="SourceGraphic"
                            in2="BackgroundImageFix"
                            result="shape"
                          />
                          <fegaussianblur
                            result="effect1_foregroundBlur"
                            stdDeviation="7"
                          />
                        </filter>
                      </defs>
                    </svg>
                    <div
                      class="c10 c11 fs-exclude"
                      size="40"
                    >
                      LH
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <div
                      class="c12"
                    >
                      <span
                        class="c13"
                      >
                        <span
                          class="c14 c15 PersonName fs-exclude"
                        >
                          Linet Hansen
                        </span>
                      </span>
                      <span
                        class="c16"
                      >
                         
                      </span>
                      <span
                        class="c17 fs-exclude"
                      >
                        d101
                      </span>
                    </div>
                    <div
                      class="c10 c18 WorkflowsStatus__101 fs-exclude"
                    >
                      TN PROBATIONER
                    </div>
                  </div>
                </div>
              </a>
            </div>
            <div
              class="c19 c20"
            >
              Milestones
            </div>
            <div
              class="c21"
            >
              <div
                class="c22"
              >
                <div />
                <span
                  class="c23"
                >
                  6 months violation-free
                </span>
              </div>
            </div>
            <div
              class="c24"
            >
              <label
                class="c25"
                for="phoneNumber"
              >
                Phone Number
              </label>
              <input
                class="c26"
                inputmode="numeric"
                maxlength="14"
                name="phoneNumber"
                placeholder="Enter a 10-digit phone number"
                type="text"
                value="(555) 555-5678"
              />
            </div>
            <div
              class="c27"
            >
              <label
                class="c28"
                for="textMessage"
              >
                Text Message
                 
                <span>
                   
                  1483
                  /
                  1600
                </span>
              </label>
              <div
                class="c29"
              >
                Message from Agent Smith at DOC:

Hey Linet! Congratulations on reaching these milestones:

- 6 months violation-free
              </div>
              <textarea
                class="c30"
                id="textMessage"
                maxlength="1483"
                placeholder="Add your own message (Optional)"
              />
            </div>
            <div
              class="c31 c32"
            >
              Do not send critical information tied to deadlines. We cannot guarantee delivery of this text message.
            </div>
            <div
              class="c33"
            >
              <span
                class="c13 c34"
              >
                <button
                  class="c35 c36"
                  disabled=""
                  kind="primary"
                  shape="pill"
                  type="button"
                >
                  Review and Send
                </button>
              </span>
              <button
                class="c35 c37"
                kind="primary"
                shape="pill"
                type="button"
              >
                I congratulated them in-person or another way
              </button>
              <div
                class=""
              >
                Opt out of sending a congratulations text?
                 
                <span
                  class="c38"
                >
                  Tell us why
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MilestonesSidePanel renders without text message preview 1`] = `
.c4 {
  font: 500 0.875rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  background: transparent;
  border: none;
  color: #006c67;
  cursor: pointer;
  padding: 0;
}

.c4:active,
.c4:hover,
.c4:focus,
.c4[aria-expanded="true"] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4:active,
.c4[aria-expanded="true"] {
  color: #014c48;
}

.c4:disabled {
  cursor: not-allowed;
  color: rgba(53,83,98,0.7);
}

.c17 {
  pointer-events: none;
}

.c17 > * {
  pointer-events: auto;
}

.c0 .ReactModal__Overlay {
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
  background-color: rgba(233,237,237,0.7);
  height: 100%;
  left: 0;
  opacity: 0;
  position: fixed;
  top: 0;
  -webkit-transition: opacity 500ms;
  transition: opacity 500ms;
  width: 100%;
  z-index: 1000;
}

.c0 .ReactModal__Overlay.ReactModal__Overlay--after-open {
  opacity: 1;
}

.c0 .ReactModal__Overlay.ReactModal__Overlay--before-close {
  opacity: 0;
}

.c0 .ReactModal__Content {
  background: #fff;
  border-radius: 8px;
  box-shadow: 0px 15px 40px rgba(22,26,33,0.3), inset 0px -1px 1px rgba(19,44,82,0.2);
  left: 50%;
  max-height: 90vh;
  max-width: 90vw;
  outline: none;
  overflow: auto;
  padding: 40px;
  position: fixed;
  top: 50%;
  -webkit-transform: translate(-50%,-50%) scale(0.75);
  -ms-transform: translate(-50%,-50%) scale(0.75);
  transform: translate(-50%,-50%) scale(0.75);
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  -webkit-transition: transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
  width: 462px;
  z-index: 1001;
}

.c0 .ReactModal__Overlay[class*="--after-open"] .ReactModal__Content {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c0 .ReactModal__Overlay[class*="--before-close"] .ReactModal__Content {
  -webkit-transform: translate(-50%,-50%) scale(0.75);
  -ms-transform: translate(-50%,-50%) scale(0.75);
  transform: translate(-50%,-50%) scale(0.75);
}

.c1.c1 .ReactModal__Content {
  padding: 0;
}

.c2.c2 .ReactModal__Content {
  height: calc(100vh - 3rem);
  max-height: unset;
  max-width: calc(100vw - 3rem);
  width: 30rem;
  left: unset;
  right: 1.5rem;
  -webkit-transform: translate( 30rem, -50% ) !important;
  -ms-transform: translate( 30rem, -50% ) !important;
  transform: translate( 30rem, -50% ) !important;
}

.c2.c2 .ReactModal__Content.ReactModal__Content--after-open {
  -webkit-transform: translate(0,-50%) !important;
  -ms-transform: translate(0,-50%) !important;
  transform: translate(0,-50%) !important;
}

.c2.c2 .ReactModal__Content.ReactModal__Content--before-close {
  -webkit-transform: translate( 30rem, -50% ) !important;
  -ms-transform: translate( 30rem, -50% ) !important;
  transform: translate( 30rem, -50% ) !important;
}

.c14 {
  font: 500 0.875rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c23 {
  font: 500 1rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c16 {
  font: 500 1.125rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.02em;
  -moz-letter-spacing: -0.02em;
  -ms-letter-spacing: -0.02em;
  letter-spacing: -0.02em;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5rem;
  line-height: 2.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  position: relative;
  width: 2.5rem;
}

.c13 svg {
  left: 0;
  position: absolute;
}

.c15 {
  color: white;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 0.625rem;
  font-weight: 700;
  line-height: 1;
  position: relative;
  text-align: center;
}

.c20 {
  color: rgba(53,83,98,0.3);
}

.c19 {
  color: #003331;
}

.c21 {
  color: #90aeb5;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-column-gap: 0.5rem;
  column-gap: 0.5rem;
  display: grid;
  grid-template-columns: auto 1fr;
}

.c12:hover .c18 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #006c67;
}

.c22 {
  color: rgba(53,83,98,0.7);
  text-wrap: balance;
  width: 18rem;
}

.c11 {
  margin-bottom: 1rem;
}

.c3 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(53,83,98,0.1);
  padding: 1rem;
}

.c3 .WorkflowsPreviewModal__close {
  grid-column: 2;
  justify-self: flex-end;
}

.c3 .WorkflowsPreviewModal__back {
  grid-column: 1;
  justify-self: flex-start;
}

.c5 {
  padding: 1.5rem 1rem;
}

.c5 hr + hr {
  display: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  margin-left: 0.5rem;
}

.c7 {
  font: 500 1rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  color: rgba(53,83,98,0.85);
  background-color: #eff1f1;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  height: 4rem;
  margin: 1rem 0 2rem 0;
  padding: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c24 {
  color: rgba(53,83,98,0.85);
  margin: 1rem 0;
}

.c25 {
  font: 500 0.875rem/1.2 "Public Sans",sans-serif;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

@media (max-width:1372px) {
  .c22 {
    width: 15rem;
  }
}

<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="c0 c1 c2 "
  />
  <div
    class="c0 c1 c2 "
  />
  <div
    class="c0 c1 c2 "
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="c0 c1 c2 "
  >
    <div
      class="ReactModal__Overlay"
    >
      <div
        aria-modal="true"
        class="ReactModal__Content"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="c3"
        >
          <button
            class="c4 WorkflowsPreviewModal__close"
            kind="link"
            shape="pill"
            type="button"
          >
            <svg
              fill="#003331"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.7 0.3C13.3 -0.1 12.7 -0.1 12.3 0.3L7 5.6L1.7 0.3C1.3 -0.1 0.7 -0.1 0.3 0.3C-0.1 0.7 -0.1 1.3 0.3 1.7L5.6 7L0.3 12.3C-0.1 12.7 -0.1 13.3 0.3 13.7C0.5 13.9 0.7 14 1 14C1.3 14 1.5 13.9 1.7 13.7L7 8.4L12.3 13.7C12.5 13.9 12.8 14 13 14C13.2 14 13.5 13.9 13.7 13.7C14.1 13.3 14.1 12.7 13.7 12.3L8.4 7L13.7 1.7C14.1 1.3 14.1 0.7 13.7 0.3Z"
              />
            </svg>
          </button>
        </div>
        <div
          class="c5 WorkflowsPreviewModal"
        >
          <div
            class="c6"
            data-testid="CongratulatedSidePanel"
          >
            <div
              class="c7"
            >
              <div
                class="c8"
              >
                <div />
                <span
                  class="c9"
                >
                  Congratulated
                </span>
              </div>
              <span
                class="c10"
              >
                Undo
              </span>
            </div>
            <div
              class="c11"
            >
              <a
                class="PersonProfileLink"
                href="/workflows/clients/p101"
              >
                <div
                  class="c12"
                >
                  <div
                    class="c13 UserAvatar"
                    size="40"
                  >
                    <svg
                      fill="none"
                      height="40"
                      role="img"
                      viewBox="0 0 80 80"
                      width="40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        LH
                      </title>
                      <mask
                        height="80"
                        id=":r3:"
                        maskUnits="userSpaceOnUse"
                        width="80"
                        x="0"
                        y="0"
                      >
                        <rect
                          fill="#FFFFFF"
                          height="80"
                          rx="160"
                          width="80"
                        />
                      </mask>
                      <g
                        mask="url(#:r3:)"
                      >
                        <rect
                          fill="#90aeb5"
                          height="80"
                          width="80"
                        />
                        <path
                          d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
                          fill="#cc989c"
                          filter="url(#prefix__filter0_f)"
                          transform="translate(0 0) rotate(176 40 40) scale(1.2)"
                        />
                        <path
                          d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
                          fill="#25636f"
                          filter="url(#prefix__filter0_f)"
                          style="mix-blend-mode: overlay;"
                          transform="translate(-4 -4) rotate(-84 40 40) scale(1.2)"
                        />
                      </g>
                      <defs>
                        <filter
                          color-interpolation-filters="sRGB"
                          filterUnits="userSpaceOnUse"
                          id="prefix__filter0_f"
                        >
                          <feflood
                            flood-opacity="0"
                            result="BackgroundImageFix"
                          />
                          <feblend
                            in="SourceGraphic"
                            in2="BackgroundImageFix"
                            result="shape"
                          />
                          <fegaussianblur
                            result="effect1_foregroundBlur"
                            stdDeviation="7"
                          />
                        </filter>
                      </defs>
                    </svg>
                    <div
                      class="c14 c15 fs-exclude"
                      size="40"
                    >
                      LH
                    </div>
                  </div>
                  <div
                    class=""
                  >
                    <div
                      class="c16"
                    >
                      <span
                        class="c17"
                      >
                        <span
                          class="c18 c19 PersonName fs-exclude"
                        >
                          Linet Hansen
                        </span>
                      </span>
                      <span
                        class="c20"
                      >
                         
                      </span>
                      <span
                        class="c21 fs-exclude"
                      >
                        d101
                      </span>
                    </div>
                    <div
                      class="c14 c22 WorkflowsStatus__101 fs-exclude"
                    >
                      TN PROBATIONER
                    </div>
                  </div>
                </div>
              </a>
            </div>
            <div
              class="c23 c24"
            >
               indicated that they congratulated
               
              Linet Hansen
               in-person or using another method. Great job!
               
            </div>
            <div
              class="c25"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
